--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,32 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&family=Barlow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&family=Barlow:wght@300;400&&display=swap');
 
 :root {
-    //COLOR PALLETE
-    --dark-blue: #0B0D17;
-    --light-violet: #D0D6F9;
-    --white: #F3F3F3
-  
-    //FONT FAMILY
-    --primary-font: 'Bellefair', serif;
-    --secondary-font: 'Barlow Condensed', sans-serif;
-    --terciary-font: 'Barlow', sans-serif;
-    
-    //FONT BASED ON 16px 
-    --h1: 9.375rem var(--primary-font) //150px;
-    --h2: 6.25rem var(--primary-font) //100px;
-    --h3: 3.5rem var(--primary-font) //56px;
-    --h4: 2rem var(--primary-font) //32px;
-    --h5: 1.75rem var(--secondary-font) //28px;
+  //COLOR PALLETE
+  --dark-blue: #0b0d17;
+  --light-violet: #d0d6f9;
+  --white: #f3f3f3;
 
-    --primary-subheading: 1.75rem var(--primary-font) //28px;
-    --secondary-subheading: 0.875rem var(--secondary-font) //14px;
-    --nav-text: 1rem var(--secondary-font) //16rem;
-    --body: 1.125rem var(--terciary-font) //18rem
-    
-  }
-  
-  body {    
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0;    
-  }
+  //FONT FAMILY
+  --primary-font: 'Bellefair', serif;
+  --secondary-font: 'Barlow Condensed', sans-serif;
+  --terciary-font: 'Barlow', sans-serif;
+
+  //FONT BASED ON 16px
+  --h1: 9.375rem; //150px;
+  --h2: 6.25rem; //100px;
+  --h3: 3.5rem; //56px;
+  --h4: 2rem; //32px;
+  --h5: 1.75rem; //28px;
+
+  --primary-subheading: 1.75rem; //28px;
+  --secondary-subheading: 0.875rem; //14px;
+  --nav-text: 1remt; //16rem;
+  --body: 1.125rem; //18rem
+}
+
+html,
+body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
