--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -46,12 +46,13 @@ nav {
     font-weight: 300;
     text-decoration: none;
     font-family: var(--secondary-font);
-  }
-}
+    letter-spacing: 2.7px;
 
-.close-icon {
-  border: none;
-  background: none;
+    span {
+      font-weight: bold;
+      margin: 0 0.5rem 0 0;
+    }
+  }
 }
 
 .nav-header {
@@ -60,12 +61,56 @@ nav {
   align-items: center;
 }
 
+.close-icon {
+  border: none;
+  background: none;
+}
+
 .nav-body {
   display: flex;
   margin-top: 5rem;
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 2.5rem;
   height: 100%;
+}
+
+.nav-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+select {
+  appearance: none;
+  border: 0;
+  outline: 0;
+  font: inherit;
+
+  width: 100%;
+  height: 3em;
+  padding: 0 4em 0 1em;
+  background: transparent;
+  color: var(--white);
+  border-radius: 0.25em;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+
+  font-family: var(--secondary-font);
+  font-size: var(--body);
+  letter-spacing: 2.7px;
+
+  option {
+    color: var(--white);
+    background: var(--dark-blue);
+    padding: 0.3rem;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &::-ms-expand {
+    display: none;
+  }
 }
