--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 1.8rem;
+  padding: 2.3rem 1.8rem 2rem;
   background: transparent;
+
+  @media (min-width: 1100px) {
+    padding: 2.3rem 0 1.8rem 2rem;
+  }
 }
