--- a/src/components/MainContainer/styles.scss
+++ b/src/components/MainContainer/styles.scss
@@ -1,9 +1,13 @@
 .main-container {
-  background-image: url('../../assets/home/background-home-mobile.jpg');
+  background-image: url('../../assets/home/background-home-tablet.jpg');
   height: 100%;
   background-size: cover;
   display: flex;
   flex-direction: column;
+
+  @media (min-width: 1100px) {
+    background-image: url('../../assets/home/background-home-desktop.jpg');
+  }
 }
 
 .main-content {
