--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -1,6 +1,19 @@
+.mobile-navbar {
+  @media (min-width: 1100px) {
+    display: none;
+  }
+}
+.desktop-navbar {
+  width: 70rem;
+  @media (max-width: 1100px) {
+    display: none;
+  }
+}
+
 .menu-btn img {
   height: 1.6rem;
 }
+
 .menu-btn {
   border: none;
   background: none;
@@ -22,7 +35,7 @@
   -webkit-backdrop-filter: blur(5px);
 }
 
-nav {
+.nav-mobile {
   background: linear-gradient(
     135deg,
     rgba(255, 255, 255, 0.096),
@@ -51,7 +64,7 @@ nav {
 
     span {
       font-weight: bold;
-      margin: 0 0.5rem 0 0;
+      margin-right: 0.5rem;
     }
   }
 }
@@ -67,7 +80,7 @@ nav {
   background: none;
 }
 
-.nav-body {
+.nav-mobile-body {
   display: flex;
   margin-top: 5rem;
   justify-content: flex-start;
@@ -77,7 +90,7 @@ nav {
   height: 100%;
 }
 
-.nav-footer {
+.nav-mobile-footer {
   display: flex;
   justify-content: flex-end;
 }
@@ -90,11 +103,12 @@ select {
 
   width: 100%;
   height: 3em;
-  padding: 0 4em 0 1em;
+  padding: 0 2em 0 1em;
+  margin-right: 3rem;
   background: transparent;
   color: var(--white);
   border-radius: 0.25em;
-  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.1);
   cursor: pointer;
 
   font-family: var(--secondary-font);
@@ -113,5 +127,70 @@ select {
 
   &::-ms-expand {
     display: none;
+  }
+}
+
+.nav-desktop {
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.098),
+    rgba(255, 255, 255, 0.098)
+  );
+  backdrop-filter: blur(15px);
+  display: flex;
+  height: 6.5rem;
+
+  justify-content: space-between;
+
+  align-items: center;
+  width: 100%;
+}
+
+.border-hover {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  border-bottom: 2px solid transparent;
+  margin-left: 3rem;
+  transition: 0.5s;
+
+  &:hover {
+    border-bottom: 2px solid var(--white);
+  }
+}
+
+.nav-desktop-body {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  a {
+    margin: 0 1rem;
+    text-decoration: none;
+    color: var(--white);
+    font-family: var(--secondary-font);
+    font-size: var(--body);
+    font-weight: 300;
+    letter-spacing: 1.7px;
+
+    span {
+      font-weight: bold;
+      margin-right: 0.5rem;
+    }
+  }
+}
+
+.nav-desktop-footer {
+  margin-right: 3rem;
+
+  .select-language {
+    @media (min-width: 1100px) {
+      &:hover {
+        box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.3);
+        transition: 0.5s;
+      }
+    }
   }
 }
