--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Bellefair&family=Barlow:wght@300;400&&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400&family=Bellefair&family=Barlow:wght@300;400&&display=swap');
 
 :root {
   //COLOR PALLETE
