--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -6,6 +6,23 @@
   background: transparent;
 
   @media (min-width: 1100px) {
-    padding: 2.3rem 0 1.8rem 2rem;
+    padding: 2.3rem 0 1.8rem 3rem;
+    .col-1 a {
+      display: flex;
+      align-items: center;
+    }
+
+    .col-1 a::after {
+      content: '';
+      margin-left: 1rem;
+      height: 1px;
+      width: 42rem;
+      position: absolute;
+      background-color: var(--white);
+      border-top: 1px solid var(--white);
+      z-index: 1;
+      margin: 0 0 0 8rem;
+      opacity: 20%;
+    }
   }
 }
