--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -153,7 +153,7 @@ select {
   align-items: center;
   height: 100%;
   border-bottom: 2px solid transparent;
-  margin-left: 3rem;
+  margin-left: 5rem;
   transition: 0.5s;
 
   &:hover {
@@ -183,9 +183,12 @@ select {
 }
 
 .nav-desktop-footer {
-  margin-right: 3rem;
+  margin-right: 1rem;
 
   .select-language {
+    padding: 0 0 0 2rem;
+    height: 3rem;
+    backdrop-filter: blur(15px);
     @media (min-width: 1100px) {
       &:hover {
         box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.3);
