--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -11,6 +11,27 @@
   height: 100%;
   color: var(--white);
   padding: 1rem 2rem;
+
+  @media (min-width: 1100px) {
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+
+    .col-1,
+    .col-2 {
+      width: 50%;
+      padding: 0 1rem;
+    }
+  }
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 0 15rem;
 }
 
 .col-2 {
@@ -21,6 +42,10 @@
   font-family: var(--secondary-font);
   font-size: var(--body);
   letter-spacing: 4.75px;
+
+  @media (min-width: 1100px) {
+    font-size: var(--h5);
+  }
 }
 
 .title {
@@ -28,6 +53,9 @@
   font-size: var(--h2);
   padding: 2rem 0rem 0.5rem;
   margin: 0;
+  @media (min-width: 1100px) {
+    font-size: var(--h1);
+  }
 }
 
 .description {
@@ -36,6 +64,11 @@
   letter-spacing: 1px;
   text-align: center;
   font-weight: 300;
+  @media (min-width: 1100px) {
+    text-align: start;
+    line-height: 32px;
+    letter-spacing: 0;
+  }
 }
 
 .col-2 {
@@ -53,4 +86,23 @@
   background-color: var(--white);
   padding: 0.7rem 6rem;
   border-radius: 5px;
+
+  @media (min-width: 1100px) {
+    padding: 7rem;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 55%;
+    margin-right: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    font-size: var(--h4);
+    &:hover {
+      transition: 0.5s;
+      border: 5rem solid var(--dark-blue);
+      box-sizing: border-box;
+    }
+  }
 }
