--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -174,6 +174,9 @@ select {
     font-size: var(--body);
     font-weight: 300;
     letter-spacing: 1.7px;
+    height: 100%;
+    display: flex;
+    align-items: center;
 
     span {
       font-weight: bold;
