--- a/src/components/Carousel/styles.scss
+++ b/src/components/Carousel/styles.scss
@@ -1,29 +1,51 @@
+.container-carousel {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
 .carousel,
 .item,
 .content,
 .carousel .item .travel-info {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+
 .carousel {
   max-width: 80vw;
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+
+.carousel .item {
+  flex: none;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .carousel .item img {
   height: 11rem;
-  padding: 1rem 0 2rem;
+  padding: 1rem 0 4rem;
 }
 
-.carousel .item .nav {
+.nav {
   display: flex;
   align-items: center;
   gap: 2rem;
+  position: absolute;
+  top: 14rem;
 }
 
-.carousel .item .nav button {
+.nav button {
   background-color: transparent;
   outline: none;
   border: 0;
@@ -37,6 +59,7 @@
   display: flex;
   align-items: center;
   padding: 0 0 0.3rem;
+  cursor: pointer;
 
   transition: 0.3s;
   &:hover {
@@ -65,7 +88,7 @@
   font-family: var(--primary-font);
   color: var(--white);
   padding: 0;
-  margin: 1.7rem 0 0;
+  margin: 1.7rem 0 1rem;
 }
 
 .carousel .item .content p {
@@ -77,6 +100,7 @@
   color: var(--white);
   text-align: center;
   margin: 0.4rem;
+  width: 80vw;
 }
 
 .carousel .item .travel-info {
