--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2.3rem 1.8rem 1rem;
+  padding: 2.3rem 1.8rem 0;
   background: transparent;
 
   @media (min-width: 1100px) {
