--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,9 +29,5 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  height: 100%;
-}
-
-#root {
-  height: 100%;
+  min-height: 100vh;
 }
