--- a/src/components/Carousel/styles.scss
+++ b/src/components/Carousel/styles.scss
@@ -69,18 +69,15 @@
 
 .carousel .item .content {
   position: relative;
+  padding: 0 0 2rem;
 }
 
-.carousel .item .content::after {
-  content: '';
+.carousel .item .border-bottom {
   height: 1px;
   width: 100%;
-  position: absolute;
   background-color: var(--white);
   border-top: 1px solid var(--white);
-  z-index: 1;
-  margin: 18em 0 0 0;
-  opacity: 15%;
+  opacity: 10%;
 }
 
 .carousel .item .content h1 {
@@ -104,7 +101,7 @@
 }
 
 .carousel .item .travel-info {
-  margin: 4rem 0;
+  margin: 3rem 0;
   gap: 1rem;
 }
 
