--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,5 +29,12 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+
+  margin: 0;
+  padding: 0;
 }
