--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -7,20 +7,18 @@
 }
 
 .home-container {
-  height: 100%;
+  height: 80vh;
   color: var(--white);
-  padding: 1rem 2rem;
+  max-width: 85%;
 
   @media (min-width: 1100px) {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    width: 100%;
 
     .col-1,
     .col-2 {
       width: 50%;
-      padding: 0 1rem;
     }
   }
 }
@@ -28,9 +26,14 @@
 .box {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
-  padding: 0 15rem;
+  padding: 2rem 0 0rem;
+  max-width: 85vw;
+
+  @media (min-width: 1100px) {
+    align-items: flex-start;
+  }
 }
 
 .col-2 {
@@ -55,6 +58,11 @@
   font-size: var(--h2);
   padding: 2rem 0rem 0.5rem;
   margin: 0;
+
+  @media (max-width: 360px) {
+    font-size: var(--h3);
+  }
+
   @media (min-width: 1100px) {
     font-size: var(--h1);
   }
