--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -16,9 +16,16 @@
     align-items: center;
     flex-direction: row;
 
-    .col-1,
+    .col-1 {
+      width: 100%;
+    }
+
     .col-2 {
-      width: 50%;
+      height: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
@@ -33,14 +40,8 @@
 
   @media (min-width: 1100px) {
     align-items: flex-start;
+    margin-left: 2rem;
   }
-}
-
-.col-2 {
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .intro {
@@ -95,7 +96,7 @@
     height: 4rem;
     width: 4rem;
     border-radius: 55%;
-    margin-right: 4rem;
+    margin-left: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
